Layout page Home

--- a/AppMilkteaShop/app/src/main/AndroidManifest.xml
+++ b/AppMilkteaShop/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:targetApi="31">
 
         <activity
-            android:name=".activity.IntroActivity"
+            android:name=".activity.HomeActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -27,7 +27,7 @@
         <activity android:name=".activity.LoginActivity" />
         <activity android:name=".activity.RegisterActivity" />
         <activity android:name=".activity.ExceptionActivity" />
-        <activity android:name=".activity.HomeActivity" />
+        <activity android:name=".activity.IntroActivity" />
         <activity android:name=".activity.AdminActivity" />
     </application>
 
