--- a/AppMilkteaShop/app/build.gradle
+++ b/AppMilkteaShop/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.squareup.retrofit2:retrofit:2.1.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
     implementation 'com.auth0.android:jwtdecode:2.0.2'
+    implementation 'com.github.bumptech.glide:glide:4.15.1'
 }
