Apply DataBinding for Cart Activity, write API add milktea to cart in Spring Boot and implement call API in Android

--- a/AppMilkteaShop/app/src/main/AndroidManifest.xml
+++ b/AppMilkteaShop/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".activity.ExceptionActivity" />
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.AdminActivity" />
+        <activity android:name=".activity.CartActivity" />
     </application>
 
 </manifest>
