--- a/AppMilkteaShop/app/src/main/AndroidManifest.xml
+++ b/AppMilkteaShop/app/src/main/AndroidManifest.xml
@@ -30,6 +30,7 @@
         <activity android:name=".activity.HomeActivity" />
         <activity android:name=".activity.AdminActivity" />
         <activity android:name=".activity.CartActivity" />
+        <activity android:name=".activity.CheckOutActivity"/>
     </application>
 
 </manifest>
