--- a/kingtea/src/main/resources/application.properties
+++ b/kingtea/src/main/resources/application.properties
@@ -6,3 +6,12 @@ spring.datasource.password=HONGSON
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql: true
+
+
+# Configure Send Mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=phanhongson234@gmail.com
+spring.mail.password=dcwqjruvqraoydne
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
