--- a/AppMilkteaShop/app/src/main/AndroidManifest.xml
+++ b/AppMilkteaShop/app/src/main/AndroidManifest.xml
@@ -14,9 +14,8 @@
         android:theme="@style/Theme.AppMilkteaShop"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
-        <activity
-            android:name=".SuccessfullyActivity"
-            android:exported="false" />
+
+
         <activity
             android:name=".activity.IntroActivity"
             android:exported="true">
@@ -34,6 +33,7 @@
         <activity android:name=".activity.CartActivity" />
         <activity android:name=".activity.CheckOutActivity" />
         <activity android:name=".activity.SuccessfullyActivity" />
+        <activity android:name=".activity.MilkteaByCategoryActivity" />
     </application>
 
 </manifest>
