--- a/AppMilkteaShop/app/src/main/AndroidManifest.xml
+++ b/AppMilkteaShop/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ContactActivity"
+            android:exported="false" />
+        <activity
             android:name=".SearchActivity"
             android:exported="false" />
         <activity
@@ -69,6 +72,7 @@
         <activity android:name=".activity.OrderDetailActivity" />
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.SearchActivity" />
+        <activity android:name=".activity.ContactActivity" />
     </application>
 
 </manifest>
