--- a/AppMilkteaShop/app/src/main/AndroidManifest.xml
+++ b/AppMilkteaShop/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ActivityUpdateImage"
+            android:exported="false" />
+        <activity
             android:name=".ContactActivity"
             android:exported="false" />
         <activity
@@ -73,6 +76,8 @@
         <activity android:name=".activity.ChangePasswordActivity" />
         <activity android:name=".activity.SearchActivity" />
         <activity android:name=".activity.ContactActivity" />
+        <activity android:name=".activity.ActivityUpdateProfile" />
+        <activity android:name=".activity.ActivityUpdateImage" />
     </application>
 
 </manifest>
